--- a/style.css
+++ b/style.css
@@ -5,8 +5,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
 
+}
+.a{
+  text-decoration: none;
+  color: white;
+}
 /* nav_bar */
 .nav_container {
   position: absolute;
